syntax = "proto3";

import "common/id.proto";
option (ecs_component_id) = 1016;

message PBCylinderShape {
  bool with_collisions = 1;
  bool is_pointer_blocker = 2;
  // TODO: should visible be another component? that maybe affects all the entities
  bool visible = 3;
  float radius_top = 4;
  float radius_bottom = 5;
}
